[build-system]
requires = [
  "setuptools>=61",
  "wheel",
  "numpy<2"   # ensure numpy is present in the isolated build env
]
build-backend = "setuptools.build_meta"

[project]
name = "py_utils"
version = "0.1.0"
description = "A few utility functions for Robotics, Computer Vision, Machine Learning"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Chad Lin"},
  {email = "chun-jung.lin@adelaide.edu.au"}
]
urls = { "Homepage" = "https://github.com/ChadLin9596/python_utils" }
requires-python = ">=3.7"
dependencies = [
    "dill",
    "lzf",
    "matplotlib",
    "numpy<2",
    "opencv-python<4.12.0.88",
    "pandas",
    "Pillow",
    "requests",
    "scipy",
    "scikit-image",
    "torch",
    "torchvision"
]
